Finish 01 Drum kit.

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,33 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  window.addEventListener("keydown", playSound);
 
+  const keys = document.querySelectorAll(".key");
+
+  for (const key of keys) {
+    key.addEventListener("transitionend", removeTransition);
+  }
+
+  function playSound(event) {
+    const { keyCode } = event;
+
+    const audio = document.querySelector(`audio[data-key="${keyCode}"`);
+    const key = document.querySelector(`div[data-key="${keyCode}"`);
+
+    if (!audio || !key) return null;
+
+    audio.currentTime = 0;
+    audio.play();
+
+    key.classList.add("playing");
+  }
+
+  function removeTransition(event) {
+    if (event.propertyName !== "transform") return null;
+
+    this.classList.remove("playing");
+  }
 </script>
 
 
