--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,42 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+      transform: rotate(90deg);
+    }
+
+    .second-hand {
+      background-color: blue;
+    }
+
+    .min-hand {
+      background-color: red;
     }
 
   </style>
 
   <script>
+    const secondBar = document.querySelector(".second-hand");
+    const minuteBar = document.querySelector(".min-hand");
+    const hourBar = document.querySelector(".hour-hand");
 
+    setInterval(setDate, 1000);
+
+    function setDate() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondsDegree = (seconds / 60) * 360 + 90;
+      const minutes = now.getMinutes();
+      const minutesDegree = (minutes / 60) * 360 + 90;
+      const hours = now.getHours();
+      const hoursDegree = (hours / 12) * 360 + 90;
+
+      secondBar.style.transform = `rotate(${secondsDegree}deg)`;
+      minuteBar.style.transform = `rotate(${minutesDegree}deg)`;
+      hourBar.style.transform = `rotate(${hoursDegree}deg)`;
+    }
 
   </script>
 </body>
