--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,29 +31,68 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const inventorsIn15ks = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+    console.table(inventorsIn15ks);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const inventorsName = inventors.map(inventor => ({
+      first: inventor.first,
+      last: inventor.last
+    }));
+    console.table(inventorsName);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const inventorsBirthdate = inventors.sort((inventor, nextInventor) => inventor.year > nextInventor.year ? 1 : -1);
+    console.table(inventorsBirthdate);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const lifeSpan = inventors.reduce((accumulator, inventor) => inventor.passed - inventor.year + accumulator, 0);
+    console.log(lifeSpan);
 
     // 5. Sort the inventors by years lived
+    const inventorsSpanSorted = inventors.sort((inventor, nextInventor) => {
+      const span1 = inventor.passed - inventor.year;
+      const span2 = nextInventor.passed - nextInventor.year;
+
+      if (span1 < span2) return -1;
+      else if (span1 > span2) return 1;
+      else return 0;
+    });
+    console.table(inventorsSpanSorted);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // const boulevards = document.querySelectorAll("div.mw-category a");
+    // const boulevardsWithDe = [...boulevards].filter(boulevard => boulevard.title.includes("de"));
+    // console.table(boulevardsWithDe);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const peopleByLastname = people.sort((person, nextPerson) => {
+      const [personLastname] = person.split(",");
+      const [nextPersonLastname] = person.split(",");
+
+      if (personLastname < nextPersonLastname) return -1;
+      else if (personLastname > nextPersonLastname) return 1;
+      else return 0;
+    });
+    console.table(peopleByLastname);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const transportation = data.reduce((acc, item) => {
+      if (!acc[item]) acc[item] = 0;
+
+      acc[item]++;
+      return acc;
+    }, {});
+
+    console.log(transportation);
   </script>
 </body>
 </html>
